# opuslib-next

./: .gitignore  Makefile  README.md  pyproject.toml  setup.py
.github/workflows/: ci.yml  performance.yml  release.yml
benchmarks/: compare_versions.py  render_summary.py
opuslib/: classes.py  exceptions.py
opuslib/api/: ctl.py  decoder.py  encoder.py  info.py
opuslib_next/: __init__.py  classes.py
opuslib_next/api/: __init__.py  ctl.py  decoder.py  multistream_decoder.py  multistream_encoder.py  projection_decoder.py  projection_encoder.py
tests/: decoder.py  encoder.py  hl_decoder.py  hl_encoder.py
